# Robotics_FirstProject

first_project/: CMakeLists.txt  package.xml
first_project/cfg/: parameters.cfg
first_project/launch/: launch.launch
first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp  prova.cpp
